# icumodelstream

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: local.example.yaml
data/: README.md  provenance.yaml.example
docs/: data_dictionary_notes.md  gap_analysis_2026-05-25.md  phase_status_2026-05-25.md  roadmap.md
docs/plans/: 2026-05-24-001-feat-marimo-clif-pipeline-notebooks-plan.md  2026-05-24-002-feat-lightgbm-baseline-phase4-plan.md  2026-05-25-001-feat-phase5-sequence-model-plan.md  2026-05-25-001-upgrade-from-basic-skeleton.md  2026-05-25-002-feat-sequence-baseline-cli-plan.md  2026-05-25-003-feat-subgroup-performance-plan.md  2026-05-25-004-feat-decision-curve-analysis-plan.md
notebooks/: 01_inspect.py  02_qc.py  03_cohort.py  04_features.py  05_baseline.py  _common.py
reports/: baseline_summary.md
scripts/: build_cohort.py  inspect_clif_parquet.py  run_qc.py
src/icumodelstream/: __init__.py  _compat.py  cli.py  cohorts.py  config.py  decision_curve.py  decision_curves.py  features.py  io.py  labels.py  metrics.py  models.py  pipeline.py  qc.py  schema.py  sequences.py  splits.py  subgroups.py  torch_models.py  torch_train.py
tests/: test_cli.py  test_cohorts.py  test_decision_curve.py  test_decision_curves.py  test_features.py  test_io.py  test_labels.py  test_metrics.py  test_models.py  test_pipeline.py  test_qc.py  test_schema.py  test_sequences.py  test_splits.py  test_splits_labels.py  test_subgroups.py  test_torch_models.py  test_torch_train.py
